--- a/style.css
+++ b/style.css
@@ -119,3 +119,10 @@ nav ul li a {
   border-radius: 7px;
   color: white;
 }
+aside img{
+  width: 100%;
+  border-radius: 10px;
+}
+aside h1,aside p{
+  color: white;
+}
