--- a/style.css
+++ b/style.css
@@ -41,8 +41,7 @@ nav ul li a {
   grid-template-rows: auto auto auto 1fr;
   grid-template-columns: repeat(4, 1fr);
   gap: 20px;
-  padding: 20px;
-  max-width: 80%;
+  /* padding: 20px; */
   margin: auto;
 }
 
@@ -52,7 +51,6 @@ nav ul li a {
   padding: 20px;
   text-align: left;
   grid-column: 1 / -1;
-  border-radius: 7px;
 }
 
 .grid-contener aside {
@@ -116,7 +114,7 @@ nav ul li a {
   grid-row: 4;
   grid-column: 1 / -1;
   padding: 20px;
-  border-radius: 7px;
+  /* border-radius: 7px; */
   color: white;
 }
 aside img{
